nova_tests/negative_capability/realtime_nogc_alloc.nv
// EXPECT_COMPILE_ERROR D172-block-form-removed
//
// Plan 16 Ф.4 (D64): внутри `realtime nogc` запрещены alloc-вызовы
// (array.new, builder.new, hashmap.new, str.from, channel.new).

module negative_capability.realtime_nogc_alloc

test "realtime nogc блокирует []int.new()" {
    ro _ = realtime nogc {
        ro xs = []int.new()
        xs.len()
    }
    assert(true)
}
